fix ie 10 img stretching bug - needed to specify width: auto......

--- a/src/apps/Bradley/Pages/Customizable/Modules/MultiPostArrowModule/MultiPostArrowModule.scss
+++ b/src/apps/Bradley/Pages/Customizable/Modules/MultiPostArrowModule/MultiPostArrowModule.scss
@@ -124,6 +124,7 @@ $arrowWidth: 11px;
         text-align: center;
 
         .arrow {
+          width: auto;
           height: 100%;
         }
       }
