--- a/src/apps/Bradley/Pages/Customizable/Modules/MultiPostNoExcerptModule/PostGridItem/PostGridItem.scss
+++ b/src/apps/Bradley/Pages/Customizable/Modules/MultiPostNoExcerptModule/PostGridItem/PostGridItem.scss
@@ -41,6 +41,7 @@
     height: 20px;
 
     .arrow {
+      width: auto;
       height: 100%;
     }
   }
