--- a/src/apps/Bradley/Pages/Customizable/Modules/SinglePostFeaturedModule/SinglePostFeaturedModule.scss
+++ b/src/apps/Bradley/Pages/Customizable/Modules/SinglePostFeaturedModule/SinglePostFeaturedModule.scss
@@ -56,6 +56,7 @@
       height: 20px;
 
       .arrow {
+        width: auto;
         height: 100%;
       }
     }
