--- a/src/apps/Bradley/Pages/Customizable/Modules/SliderModule/SliderModule.scss
+++ b/src/apps/Bradley/Pages/Customizable/Modules/SliderModule/SliderModule.scss
@@ -70,6 +70,7 @@
           text-align: center;
 
           .arrow {
+            width: auto;
             height: 100%;
           }
         }
