--- a/src/apps/Bradley/Pages/ProductDetail/ProductContent/ProductContent.scss
+++ b/src/apps/Bradley/Pages/ProductDetail/ProductContent/ProductContent.scss
@@ -43,6 +43,7 @@ h1.title {
   height: 50px;
 
   img {
+    width: auto;
     height: 100%;
     object-fit: cover;
   }
